--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pygame-menu==4.2.6
 pygame-widgets==1.0.0
 pyinstaller==4.8
 pyinstaller-hooks-contrib==2021.5
+pyperclip==1.8.2
 python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
